competency block is added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             <li>Колледж информатики и статистики, г. Москва</li>
         </ul>
     </div>
+    <div class="competency">
+        <h3>Профессиональные навыки:</h3>
+        <ul>
+            <li>Опыт работы с HTML5, CSS, JS</li>
+            <li>Опыт вёрстки сайтов на основе дизайн макетов</li>
+            <li>Опыт работы с фреймворками React+typescript, Vue</li>
+            <li>Опыт работы с системой контроля версии git</li>
+            <li>Опыт взаимодействия с REST API сервисами</li>
+            <li>Опыт работы со сборщиком Webpack</li>
+            <li>Опыт адаптивной вёрстки</li>
+        </ul>
+    </div>
     </div>
 </body>
 </html>
