courses block is added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
             <li>Опыт работы с системой контроля версии git</li>
             <li>Опыт взаимодействия с REST API сервисами</li>
             <li>Опыт работы со сборщиком Webpack</li>
-            <li>Опыт адаптивной вёрстки</li>
+            <li>Опыт адаптивной верстки</li>
+            <li>Опыт создания модульных и интеграционных тестов</li>
+
+        </ul>
+    </div>
+    <div class="courses">
+        <h3>Курсы:</h3>
+        <ul>
+            <li>Основы frontend-разработки на языке JavaScript</li>
+            <li>Алгоритмы и структуры данных</li>
         </ul>
     </div>
     </div>
