--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="courses">
         <h3>Курсы:</h3>
         <ul>
+            <li>Основы web-технологий</li>
             <li>Основы frontend-разработки на языке JavaScript</li>
             <li>Алгоритмы и структуры данных</li>
         </ul>
