lanquages block is added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             <li>Алгоритмы и структуры данных</li>
         </ul>
     </div>
+    <div class="languages">
+        <h3>Владение языка:</h3>
+        <ul>
+            <li>русский, свободное владение</li>
+            <li>английский, могу вести диалог</li>
+            <li>немецкий, владение со словарём</li>
+        </ul>
+    </div>
     </div>
 </body>
 </html>
